# FAC_Foreground_Aware_Contrast

./: LICENSE  README.md
Descriptors/HKS/: hks.py  sampler.py  trimesh.py
Descriptors/Keypoints_PCL/: README.md
Descriptors/PFH/: pfh.py  utils.py
Descriptors/Shot/: setup.py  shot.py
Descriptors/SuperPoint_Network/lib/ply_c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  random_subgraph.cpp
Descriptors/VCCS/: main.cc  vccs_knn_supervoxel.h
Descriptors/WKS/: compute_laplace_spectrum.py  hamiltonian.py  laplace.py  viz.py  wks_signature.py
Descriptors/pyhks/: hks.py  trimesh.py
Downstreams/: README.md  main.py
Downstreams/criterions/: __init__.py  nce_loss_moco.py
Downstreams/datasets/: __init__.py  depth_dataset.py
Downstreams/models/: __init__.py  base_ssl3d_model.py
FAC_Conv/: INSTALL.md  README.md  crf_postprocessing.py  generate_pseudo_label.py  plot_convergence.py  plot_convergence_RM3D.py  plot_convergence_segmentation.py  test_models.py  train_ModelNet40.py  train_S3DIS.py  train_SemanticKitti.py  visualize_deformations.py
FAC_Ins/: README.md  main_instance_segmentation.py
OpenPCDet/: README.md  setup.py
Region_Select_Sample/: README.md  animate_region_growing_merge.py  benchmarks.py  class_util.py  examine_h5.py  h5_to_ply.py  learn_region_grow_util.py  load_env.sh  metric_loss_ops.py  middle_element.py  requirements.txt  stage_data.py  stage_semantic_kitti.py  test_beam_search.py  test_mcpnet.py  test_random_restart.py  test_region_grow.py  train_mcpnet.py  train_pointnet.py  train_region_grow.py
(+153 files in other folders)
